# fntsub

./: CMakeLists.txt  README.MD
include/: font_shrinker.h
src/: font_shrinker.cc
src/sfntly/table/: table.h
src/subtly/: font_assembler.cc  utils.cc
src/test/: font_shrinker_test_main.cc
